--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,11 @@
 
     <div class="form">
         <form action="/review" method="POST">
-            <label for="content">channel vedios url</label>
+            <label for="content">channel vedios url :</label>
             <input type="text" name="content" id="content"><br>
-            <label for="num">number of vedios list:</label>
+            <label for="num">Number of vedios list:</label>
 			<input type="text" name="num" id="num"><br>
-            <label for=numd>number of vedios to download:</label>
+            <label for=numd>Number of vedios to download:</label>
 			<input type="text" name="numd"  id="numd">
             <input type="submit" value="Search">
         </form>
